KSENROLL-13101: fixed minor alignment issue with schedule when dropping courses
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-enroll/trunk@70722 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-enroll-ui/src/main/angular/registration/app/styles/less/util/alert.less
+++ b/ks-enroll-ui/src/main/angular/registration/app/styles/less/util/alert.less
@@ -129,4 +129,8 @@
   .util-Alert {
     margin: 0.5em 0 0.5em 0;
   }
+
+  .util-Alert--card--dropped {
+    margin: 0 10px 10px;
+  }
 }
